# LidarFilter

./: CMakeLists.txt  README.md  cmake_commands.txt
data/: F_10_1.txt  F_3_0.txt  F_3_1.txt  F_7_3.txt  sampleRF.txt
src/: main.cpp  out  testMain.cpp
src/karri-vivek/: karri-vivek.cpp  karri-vivek.h
